--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
- body{
-    background-color: rgb(15, 0, 29);
- }
+   body{
+      background-color: rgb(215, 213, 218);
+   }
+
+.dark body  {
+  background-color: #0A0909;
+}
+
+.dark #searchButton{
+   background: #171717;
+   box-shadow: -1px -8px 19px #000000 inset; 
+   border-radius: 12px
+}
